выполняет задание "Доверяй, но проверяй", часть первая "Карточки объявлений"

--- a/css/style.css
+++ b/css/style.css
@@ -1016,6 +1016,10 @@ fieldset {
   background-color: #ffffff;
 }
 
+.popup--hidden {
+  display: none;
+}
+
 .popup__avatar {
   position: absolute;
   bottom: 100%;
