--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,10 @@ fieldset {
   background-color: #dadada;
 }
 
+.ad-form-header__preview img {
+  object-fit: contain;
+}
+
 .ad-form__field {
   display: -webkit-box;
   display: -ms-flexbox;
